--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 logging.level.org.springframework=WARN
 logging.level.org.apache=WARN
 logging.level.com.codingexercise.consumer=DEBUG
+
+spring.data.mongodb.database=customer_event_repository
