got working accepting both jms messages or restful api calls

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ logging.level.org.apache=WARN
 logging.level.com.codingexercise.consumer=DEBUG
 
 spring.data.mongodb.database=customer_event_repository
+spring.activemq.broker-url=tcp://localhost:61616
